# railway-uv-shared-package

./: README.md
best_solution/: README.md
best_solution/app/: pyproject.toml  railway.json
best_solution/app/src/app/: main.py
best_solution/app2/: pyproject.toml  railway.json
best_solution/app2/src/app2/: main.py
best_solution/common/: pyproject.toml
best_solution/common/src/common/: __init__.py
docker/: README.md
docker/app/: Dockerfile  pyproject.toml
docker/app2/: Dockerfile  pyproject.toml
docker/common/: pyproject.toml
elegant_but_broken/: README.md
elegant_but_broken/app/: pyproject.toml  railpack.json
elegant_but_broken/app/src/app/: main.py
elegant_but_broken/app2/: pyproject.toml  railpack.json
elegant_but_broken/app2/src/app2/: main.py
elegant_but_broken/common/: pyproject.toml
elegant_but_broken/common/src/common/: message.py
ugly/: README.md  pyproject.toml  railway.json
ugly/app/: build.sh  railway.json  start.sh
ugly/app2/: build.sh  start.sh
ugly/common/src/common/: message.py
