[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "FastAPI app consuming local common package"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "common",
]

[tool.uv.sources]
common = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
